[gd_scene load_steps=13 format=3 uid="uid://dfwpf55ajjtv1"]

[ext_resource type="Script" uid="uid://dykhujf08cqwk" path="res://scripts/menu.gd" id="1_lj6h2"]
[ext_resource type="FontFile" uid="uid://bj8pwquunfxx8" path="res://Pizza Tower.ttf" id="2_u3bib"]
[ext_resource type="Texture2D" uid="uid://l2atiswygex0" path="res://transitions/bg.jpg" id="3_0ctdu"]
[ext_resource type="Texture2D" uid="uid://cw64dvnkk3oqm" path="res://arrow.png" id="3_2fbfq"]
[ext_resource type="Texture2D" uid="uid://b1a546gu0sy1e" path="res://arrow_green.png" id="5_kyhnv"]
[ext_resource type="Texture2D" uid="uid://bh3rusuqfqwpi" path="res://arrow2.png" id="5_ooihk"]
[ext_resource type="Texture2D" uid="uid://c2isxy3781r0g" path="res://arrow_green2.png" id="6_ooihk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fbfq"]

[sub_resource type="Animation" id="Animation_vmxya"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_kyhnv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buttonback:icon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2fbfq")]
}

[sub_resource type="Animation" id="Animation_7r7o8"]
resource_name = "arrow_back"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonback:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_2fbfq"), ExtResource("5_ooihk")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="Animation" id="Animation_li7wd"]
resource_name = "arrow_green"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_kyhnv"), ExtResource("6_ooihk")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0, false, false],
"method": &"seek"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7r7o8"]
_data = {
&"RESET": SubResource("Animation_vmxya"),
&"arrow_back": SubResource("Animation_7r7o8"),
&"arrow_green": SubResource("Animation_li7wd")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lj6h2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05185185
anchor_right = 1.0
anchor_bottom = 0.28796297
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_u3bib")
theme_override_font_sizes/font_size = 120
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 278.0
offset_right = 1080.0
offset_bottom = 1078.0
theme_override_fonts/normal_font = ExtResource("2_u3bib")
theme_override_font_sizes/normal_font_size = 48
text = "Text font: 1001Fonts
Whistle SFX: Pablo-F - freesound.org
Arcade assets: comp3interactive - itch.io
Increase sfx: michael_kur95 - freesound.org
Oscilation sfx: GuilhermeCayeiro - freesound.org
Toast: pngall.com
Jam: pluspng.com
Rope sfx: FullStackSound - freesound.org
Rope sfx 2: MPierluissi - freesound.org
Retro explosion: Mrthenoronha - freesound.org
Knocking wall - Taira Komori on freesound.org
Jail background: freepik.es
Box break sfx: vibinchillin - freesound.org
Apple sfx: BerduSmith - freesound.org
Pencil sfx: ani_music - freesound.org
Ping pong sfx: ryusa - freesound.org
Pop sfx: CrazyBeatsINC - freesound.org
Wallet: pngimg.es
Soda: vecteezy.com
Chips bag: stavr0 - Wallpapers.com
Cookies: freepik.com
Camping bg: wallpapercave.com
Racket image: pngimg.com
Gamepad icon: pngimg.com
Caution tape: vecteezy.com
Leaderboard service: trytalo.com
Party horn: Lucas_Schacht - freesound.org
Ham sfx: Lextao - freesound.org
Puzzle icon: pngmart.com
Valve sfx: Department64 - freesound.org
Samurai: swordis.com
Dojo background: wallpaperaccess.com"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="buttonback" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026851851
anchor_top = 0.024074074
anchor_right = 0.24153072
anchor_bottom = 0.13518518
offset_left = 1.0
offset_top = 4.0
offset_right = 1.0000305
offset_bottom = 4.0
pivot_offset = Vector2(110, 50)
theme_override_fonts/font = ExtResource("2_u3bib")
theme_override_font_sizes/font_size = 64
theme_override_icons/icon = ExtResource("3_2fbfq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2fbfq")
icon = ExtResource("3_2fbfq")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7r7o8")
}

[node name="Bg" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, 0)
texture = ExtResource("3_0ctdu")

[node name="Bg2" type="Sprite2D" parent="."]
modulate = Color(0.23110586, 0.40934858, 0.4403412, 1)
z_index = -3
position = Vector2(540, -2156)
texture = ExtResource("3_0ctdu")

[connection signal="mouse_entered" from="buttonback" to="." method="_on_buttonback_mouse_entered"]
[connection signal="mouse_exited" from="buttonback" to="." method="_on_buttonback_mouse_exited"]
[connection signal="pressed" from="buttonback" to="." method="_on_buttonback_pressed"]
