[gd_scene load_steps=4 format=3 uid="uid://re18gkg4sw4r"]

[ext_resource type="Script" uid="uid://dykhujf08cqwk" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="FontFile" uid="uid://bj8pwquunfxx8" path="res://Pizza Tower.ttf" id="1_yqeox"]
[ext_resource type="Texture2D" uid="uid://cttgst47ysjxh" path="res://POVlike hand.png" id="3_con2f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -100.0
offset_right = 113.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 120
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 64
text = "Credits"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05185185
anchor_right = 1.0
anchor_bottom = 0.28796297
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_yqeox")
theme_override_font_sizes/font_size = 120
text = "HAND
WARE"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PoVlikeHand" type="Sprite2D" parent="."]
position = Vector2(269, 183)
rotation = -0.16231562
scale = Vector2(2, 2)
texture = ExtResource("3_con2f")

[node name="PoVlikeHand2" type="Sprite2D" parent="."]
position = Vector2(800.99994, 185)
rotation = 0.16231562
scale = Vector2(2, 2)
texture = ExtResource("3_con2f")
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
